--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                 <!-- Fotografía -->
                 <sec class="info__photo">
-                    <img class="info__img" src="https://scontent-eze1-1.xx.fbcdn.net/v/t39.30808-6/240120774_4519996721389839_712443416729152425_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=LsDoSGQUeDIAX8HiM0r&_nc_ht=scontent-eze1-1.xx&oh=00_AfBSrSERFfHrY5Hw_Law7Af3sKAB30B0pKz_BkdwpmLuWQ&oe=63FE946A" alt="Fipe asi como que no me doy cuenta">
+                    <img class="info__img" src="assets/img/cesar.jpeg" alt="Fipe asi como que no me doy cuenta">
                 </sec>
 
                 <!-- Información Básica-->
